Fixed margins, text align and vertical align

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,8 @@ body {
 
 div {
   display: inline-block;
+  text-align: left;
+  vertical-align: middle;
 }
 
 img {
@@ -27,7 +29,7 @@ img {
 }
 
 h2 {
-  margin: 1rem 1rem 1rem 1.5rem;
+  margin: .5rem .5rem .5rem 1.5rem;
   text-align: left;
 }
 
@@ -44,7 +46,6 @@ p {
   color: black;
   border-radius: 4px;
   text-decoration: none;
-  text-align: center;
   padding: 1em;
 }
 
